--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
+
+  numberpicker:
+  flutter_colorpicker:
+  duration_picker:
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
